tests/ui/unboxed-closures/unboxed-closure-immutable-capture.stderr
error[E0594]: cannot assign to `x`, as it is not declared as mutable
  --> $DIR/unboxed-closure-immutable-capture.rs:9:13
   |
LL |     move || x = 1;
   |             ^^^^^ cannot assign
   |
help: consider changing this to be mutable
   |
LL |     let mut x = 0;
   |         +++

error[E0596]: cannot borrow `x` as mutable, as it is not declared as mutable
  --> $DIR/unboxed-closure-immutable-capture.rs:10:17
   |
LL |     move || set(&mut x);
   |                 ^^^^^^ cannot borrow as mutable
   |
help: consider changing this to be mutable
   |
LL |     let mut x = 0;
   |         +++

error[E0594]: cannot assign to `x`, as it is not declared as mutable
  --> $DIR/unboxed-closure-immutable-capture.rs:11:13
   |
LL |     move || x = 1;
   |             ^^^^^ cannot assign
   |
help: consider changing this to be mutable
   |
LL |     let mut x = 0;
   |         +++

error[E0596]: cannot borrow `x` as mutable, as it is not declared as mutable
  --> $DIR/unboxed-closure-immutable-capture.rs:12:17
   |
LL |     move || set(&mut x);
   |                 ^^^^^^ cannot borrow as mutable
   |
help: consider changing this to be mutable
   |
LL |     let mut x = 0;
   |         +++

error[E0594]: cannot assign to `x`, as it is not declared as mutable
  --> $DIR/unboxed-closure-immutable-capture.rs:13:8
   |
LL |     || x = 1;
   |        ^^^^^ cannot assign
   |
help: consider changing this to be mutable
   |
LL |     let mut x = 0;
   |         +++

error[E0596]: cannot borrow `x` as mutable, as it is not declared as mutable
  --> $DIR/unboxed-closure-immutable-capture.rs:14:12
   |
LL |     || set(&mut x);
   |            ^^^^^^ cannot borrow as mutable
   |
help: consider changing this to be mutable
   |
LL |     let mut x = 0;
   |         +++

error[E0594]: cannot assign to `x`, as it is not declared as mutable
  --> $DIR/unboxed-closure-immutable-capture.rs:15:8
   |
LL |     || x = 1;
   |        ^^^^^ cannot assign
   |
help: consider changing this to be mutable
   |
LL |     let mut x = 0;
   |         +++

error[E0596]: cannot borrow `x` as mutable, as it is not declared as mutable
  --> $DIR/unboxed-closure-immutable-capture.rs:16:12
   |
LL |     || set(&mut x);
   |            ^^^^^^ cannot borrow as mutable
   |
help: consider changing this to be mutable
   |
LL |     let mut x = 0;
   |         +++

error: aborting due to 8 previous errors

Some errors have detailed explanations: E0594, E0596.
For more information about an error, try `rustc --explain E0594`.
